wrote Tree of Life API connectors

--- a/tolGraph-SANDBOX.ipynb
+++ b/tolGraph-SANDBOX.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -65,14 +65,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "animalia_link = \"http://tolweb.org/onlinecontributors/app?service=external&page=xml/TreeStructureService&node_id=2374\"\n",
     "anlink1 = \"http://tolweb.org/onlinecontributors/app?service=external&page=xml/TreeStructureService&node_id=2374&optype=1\"\n",
     "primate_link = \"http://tolweb.org/onlinecontributors/app?service=external&page=xml/TreeStructureService&node_id=15963\"\n",
+    "Homo_search = \"http://tolweb.org/onlinecontributors/app?service=external&page=xml/GroupSearchService&group=homo Sapiens\"\n",
     "limit = 100000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['<?xml version=\"1.0\" standalone=\"yes\"?>', '', '<NODES COUNT=\"1\">', '<NODE ID=\"16421\">', '<NAME><![CDATA[Homo sapiens]]></NAME>', '</NODE>', '</NODES>', '']\n"
+     ]
+    }
+   ],
+   "source": [
+    "raw_search = []\n",
+    "with requests.get(Homo_search, stream=True) as r:\n",
+    "    i = 0\n",
+    "    for c in r.iter_lines():\n",
+    "        c = c.decode('utf-8')#.strip()\n",
+    "        i +=1\n",
+    "        raw_search.append(c)\n",
+    "        if i % 500 == 0:\n",
+    "            print(i, end=' ')\n",
+    "        if i > limit:\n",
+    "            break\n",
+    "print(raw_search)"
    ]
   },
   {
