--- a/wiki-SANDBOX.ipynb
+++ b/wiki-SANDBOX.ipynb
@@ -2,16 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "import phyloGraph as ph\n",
+    "\n",
+    "from plotly.offline import download_plotlyjs, init_notebook_mode\n",
+    "init_notebook_mode(connected=True)\n",
+    "\n",
+    "#vim ~/.Plotly/.Credentials\n",
+    "\n",
     "import requests\n",
     "import collections\n",
     "import json\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import re\n",
+    "import sys\n",
     "\n",
     "import wikipedia\n",
     "#https://stackoverflow.com/questions/8088226/content-of-infobox-of-wikipedia"
@@ -19,24 +40,247 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the data of phylo\n"
+     ]
+    }
+   ],
+   "source": [
+    "pgd = ph.phyloData()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mammalia</td>\n",
+       "      <td>15040</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       name     id\n",
+       "0  Mammalia  15040"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pgd.search_name(\"Mammalia\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#query='some url'\n",
-    "#\n",
-    "#raw_search = []\n",
-    "#with requests.get(query, stream=True) as r:\n",
-    "#    i = 0\n",
-    "#    for c in r.iter_lines():\n",
-    "#        c = c.decode('utf-8')#.strip()\n",
-    "#        i +=1\n",
-    "#        raw_search.append(c)\n",
-    "#        if i % 500 == 0:\n",
-    "#            print(i, end=' ')\n",
-    "#        if i > limit:\n",
-    "#            break\n",
-    "#print(raw_search)"
+    "#pgd.fetch_tol_data(15040, limit=1000000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pgd.df = pd.read_csv(\"data/Mammalia-15040-noage.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10395, 9)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ancestor</th>\n",
+       "      <th>depth</th>\n",
+       "      <th>extinct</th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>num_kids</th>\n",
+       "      <th>phylesis</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2466</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2499</td>\n",
+       "      <td>Chordata</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.357744</td>\n",
+       "      <td>-0.890592</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2499</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>14819</td>\n",
+       "      <td>Calcichordata</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.663883</td>\n",
+       "      <td>-0.570486</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2499</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14821</td>\n",
+       "      <td>Urochordata</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.630175</td>\n",
+       "      <td>-0.806125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>14821</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>114489</td>\n",
+       "      <td>Octacnemidae</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1.009634</td>\n",
+       "      <td>-1.693761</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>14821</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>114490</td>\n",
+       "      <td>Phlebobranchiata</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.999091</td>\n",
+       "      <td>-0.313634</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ancestor  depth  extinct      id              name  num_kids  phylesis  \\\n",
+       "0      2466      1        0    2499          Chordata         2         0   \n",
+       "1      2499      2        2   14819     Calcichordata         0         0   \n",
+       "2      2499      2        0   14821       Urochordata         8         0   \n",
+       "3     14821      3        0  114489      Octacnemidae         0         0   \n",
+       "4     14821      3        0  114490  Phlebobranchiata         4         0   \n",
+       "\n",
+       "          x         y  \n",
+       "0 -0.357744 -0.890592  \n",
+       "1 -0.663883 -0.570486  \n",
+       "2 -0.630175 -0.806125  \n",
+       "3 -1.009634 -1.693761  \n",
+       "4 -0.999091 -0.313634  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(pgd.df.shape)\n",
+    "pgd.df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pgd.df.to_parquet(\"data/Mammalia-15040-df.parquet.snappy\")\n",
+    "pgd.df.to_csv(\"data/Mammalia-15040-noage.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pgd.df is 1.4 MB\n",
+      "pgd.raw is 1.3 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# to get total size, go here: https://code.activestate.com/recipes/577504/\n",
+    "print(\"pgd.df is {} MB\".format(np.round(sys.getsizeof(pgd.df) / 1048576, 1)))\n",
+    "print(\"pgd.raw is {} MB\".format(np.round(sys.getsizeof(pgd.raw) / 1048576, 1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.........100.........200.........300.........400.........500.........600.........700.........800.........900.........1000.........1100.........1200.........1300.........1400.........1500.........1600.........1700.........1800.........1900.........2000.........2100.........2200.........2300.........2400.........2500.........2600.........2700.........2800.........2900.........3000.........3100.........3200.........3300.........3400.........3500.........3600.........3700.........3800.........3900.........4000.........4100.........4200.........4300.........4400.........4500.........4600......."
+     ]
+    }
+   ],
+   "source": [
+    "pgd.add_time(write=\"data/Mammalia-15040-df.csv\")"
    ]
   },
   {
@@ -45,6 +289,20 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## querying experiments"
+   ]
   },
   {
    "cell_type": "code",
