scraping times to file and making links_dict

--- a/while-bored-SANDBOX.ipynb
+++ b/while-bored-SANDBOX.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,6 +53,42 @@
     "    except:\n",
     "        return None"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d, box = ph.get_dates(\"Monotremata\", gt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' automatic taxobox name monotremes ref name msw msw groves pages id ref fossil range late triassic ref cite journal last hugall first a f year title calibration choice rate smoothing and the pattern of tetrapod diversification according to the long nuclear gene rag url journal syst biol volume issue pages doi display authors etal ref holocene fossil range image prototheria collage png image caption a short beaked echidna a platypus a steropodon reconstruction and a western long beaked echidna taxon monotremata authority charles lucien bonaparte c l bonaparte ref cite journal last bonaparte first c l title a new systematic arrangement of vertebrated animals journal transactions of the linnean society of london date volume page doi j tb x url https www biodiversitylibrary org page ref subdivision ranks subgroups subdivision kryoryctes steropodontidae platypoda ornithorhynchidae tachyglossa echidna tachyglossidae monotremes are one of the three main groups of living mammal s along with placentals eutheria and marsupials metatheria the monotremes are typified by oviparity laying egg s rather than bearing live young and by structural differences in their brains jaws digestive and reproductive tracts and other body parts compared to the more common mammalian types however like all mammals the female monotremes nurse their young with milk monotremes are traditionally referred to as the mammalian subclass prototheria the only surviving examples of monotremes are all indigenous to australia and new guinea although there is evidence that they were once more widespread including some extinct species in south america ref cite journal last pascual first rosendo last archer first michael last jaureguizar first edgardo ortiz last prado first jos l last godthelp first henk last hand first suzanne j date title first discovery of monotremes in south america url https www nature com nature journal v n abs a html journal nature language en volume issue pages doi a ref the existing monotreme species are the platypus and four species of echidna s there is currently some debate regarding monotreme taxonomy taxonomy the word monotreme comes from the greek monos single and trema hole referring to the cloaca '"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.sub(\"[^A-Za-z]+\", \" \", box).lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -153,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +276,7 @@
        " '']"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +341,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# building links_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -325,8 +375,6 @@
        "      <th>phylesis</th>\n",
        "      <th>x</th>\n",
        "      <th>y</th>\n",
-       "      <th>Begin</th>\n",
-       "      <th>End</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -341,8 +389,6 @@
        "      <td>0</td>\n",
        "      <td>-0.794184</td>\n",
        "      <td>0.918448</td>\n",
-       "      <td>558.0</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -355,8 +401,6 @@
        "      <td>0</td>\n",
        "      <td>-0.091174</td>\n",
        "      <td>0.033661</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -369,8 +413,6 @@
        "      <td>0</td>\n",
        "      <td>-1.014761</td>\n",
        "      <td>0.366714</td>\n",
-       "      <td>2012.0</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -383,8 +425,6 @@
        "      <td>0</td>\n",
        "      <td>-0.066112</td>\n",
        "      <td>-0.370996</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -397,8 +437,6 @@
        "      <td>0</td>\n",
        "      <td>-0.344893</td>\n",
        "      <td>-0.201929</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -412,39 +450,46 @@
        "3     14821      3        0  114489      Octacnemidae         0         0   \n",
        "4     14821      3        0  114490  Phlebobranchiata         4         0   \n",
        "\n",
-       "          x         y   Begin  End  \n",
-       "0 -0.794184  0.918448   558.0  0.0  \n",
-       "1 -0.091174  0.033661     NaN  NaN  \n",
-       "2 -1.014761  0.366714  2012.0  0.0  \n",
-       "3 -0.066112 -0.370996     NaN  NaN  \n",
-       "4 -0.344893 -0.201929     NaN  NaN  "
+       "          x         y  \n",
+       "0 -0.794184  0.918448  \n",
+       "1 -0.091174  0.033661  \n",
+       "2 -1.014761  0.366714  \n",
+       "3 -0.066112 -0.370996  \n",
+       "4 -0.344893 -0.201929  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"data/Chordata-2499-df.csv\")\n",
+    "df = pd.read_csv(\"data/Chordata-2499-noage.csv\")\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(657, 11)\n"
+      "(10395, 9)\n"
      ]
     }
    ],
    "source": [
-    "df = df.loc[df['Begin'].notnull()]\n",
+    "#df = df.loc[df['Begin'].notnull()]\n",
     "#df = df.loc[df['Begin'] < 500]\n",
     "print(df.shape)"
    ]
@@ -458,14 +503,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +570,7 @@
        "606  0.69956   55.0  0.0  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +591,7 @@
        "[15997]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,22 +609,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'children': [], 'parents': [15997]}\n"
+      "{'parents': [2466], 'children': []}\n",
+      "{'parents': [16015], 'children': []}\n",
+      "{'parents': [100852], 'children': []}\n",
+      "{'parents': [84686], 'children': []}\n",
+      "{'parents': [67993], 'children': []}\n",
+      "{'parents': [66413], 'children': []}\n",
+      "{'parents': [57823], 'children': []}\n",
+      "{'parents': [92006], 'children': []}\n",
+      "{'parents': [92095], 'children': []}\n",
+      "{'parents': [16958], 'children': []}\n",
+      "{'parents': [68930], 'children': []}\n"
      ]
     }
    ],
    "source": [
     "links_dict = {}\n",
     "for i, this_row in df.iterrows():\n",
+    "    this_id = int(this_row['id'])\n",
+    "    # get parents\n",
+    "    if isinstance(this_row['ancestor'], int):\n",
+    "        parents = [this_row['ancestor']]\n",
+    "    else:\n",
+    "        parents = list(this_row['ancestor'])\n",
+    "        print(this_row)\n",
     "    # add parents\n",
-    "    parents = list(this_row['ancestor'])\n",
     "    try:\n",
     "        # add parents if the id already exists\n",
     "        links_dict[this_id]['parents'] += parents\n",
@@ -601,15 +662,50 @@
     "            # if not, create parent node and add as child\n",
     "            links_dict[parent] = {}\n",
     "            links_dict[parent]['children'] = [this_id]\n",
-    "            links_dict[this_id]['parents'] = []"
+    "            links_dict[parent]['parents'] = []\n",
+    "        # filter to only unique\n",
+    "        links_dict[parent]['children'] = list(set(links_dict[parent]['children']))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10396"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(links_dict.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isinstance(this_row['ancestor'], int)"
+   ]
   },
   {
    "cell_type": "code",
@@ -623,14 +719,141 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def create_plot_data(self, \n",
+    "                 highlight = 'all',\n",
+    "                 max_nodes = 5000,\n",
+    "                 max_depth = 20,\n",
+    "                 color_attr = 'extinct',\n",
+    "                 Z_dim = 'depth',\n",
+    "                 Z_dim_mult = -1,\n",
+    "                 add_links = False):\n",
+    "''''''"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "if highlight == 'all':\n",
+    "    pick = self.df.ix[0, 'id']\n",
+    "else:\n",
+    "    pick = highlight\n",
+    "\n",
+    "# subset to max_nodes and max_depth\n",
+    "df = self.df[self.df['depth'] <= max_depth].head(max_nodes)\n",
+    "df = df.reset_index()\n",
+    "\n",
+    "# get kinfolk\n",
+    "kin = [pick]\n",
+    "# add parents\n",
+    "kin += self.links_dict[pick]['parents']\n",
+    "# add kids\n",
+    "for c in self.links_dict[pick]['children']:\n",
+    "    kin += self.links_dict[c]['children']\n",
+    "kin = list(set(kin))\n",
+    "\n",
+    "# subset\n",
+    "df['kin'] = 0\n",
+    "df['kin'][df['id'].isin(kin)] = 1\n",
+    "print(df[df['kin']==1])\n",
+    "\n",
+    "###############\n",
+    "### NEED TO CREATE LINKS_LIST HERE\n",
+    "## create links list\n",
+    "links_list = []\n",
+    "for i, n in df.iterrows():\n",
+    "    links_list.append({\n",
+    "        'source': n['id'], \n",
+    "        'target': n['ancestor'], \n",
+    "        'value': n['num_kids']\n",
+    "    })\n",
+    "\n",
+    "#print(\"len(links_list): {}\".format(len(links_list)))\n",
+    "#print(\"first 3 links: {}\".format(links_list[:3]))\n",
+    "\n",
+    "#links_list = [l for l in links_list if l['target'] in list(df['id'])]\n",
+    "L=len(links_list)\n",
+    "#print(\"len(links_list): {}\".format(L))\n",
+    "\n",
+    "#\n",
+    "Edges=[(links_list[k]['source'], links_list[k]['target']) for k in range(L)]\n",
+    "#print(\"Edges {}\".format(Edges[:5]))\n",
+    "\n",
+    "# \n",
+    "labels=[]\n",
+    "group=[]\n",
+    "alpha = []\n",
+    "layt = []\n",
+    "for i, node in df.iterrows():\n",
+    "    # create text labels\n",
+    "    if add_links:\n",
+    "        try:\n",
+    "            #this_page_id = wikipedia.search(node['name'], results=1)[0]\n",
+    "            labels.append('<a href=\"https://en.wikipedia.org/wiki/{}\">{}</a>'.format(node['name'], node['name']))\n",
+    "        except:\n",
+    "            labels.append(str(node['name']))\n",
+    "    else:\n",
+    "        labels.append(str(node['depth']) + ' ' + node['name'])\n",
+    "    # create color key\n",
+    "    group.append(node[color_attr])\n",
+    "    # create opacity key\n",
+    "    alpha.append(node['kin'])\n",
+    "    # create layout list\n",
+    "    d = node[Z_dim]\n",
+    "    # # PCA\n",
+    "    # # layt.append(list(X_pca[i]) + [d * -1])\n",
+    "    layt.append([node['x'], \n",
+    "                 node['y'], \n",
+    "                 (d*Z_dim_mult)+np.random.uniform(-0.1,0.1,1)[0]])    \n",
+    "\n",
+    "\n",
+    "#print(labels[:3])\n",
+    "#print(group[:3])\n",
+    "#print(alpha[:3])\n",
+    "#print(len(layt))\n",
+    "#print(layt[:3])\n",
+    "\n",
+    "# make nodes\n",
+    "Xn=[layt[k][0] for k in range(len(layt))]# x-coordinates of nodes\n",
+    "Yn=[layt[k][1] for k in range(len(layt))]# y-coordinates\n",
+    "Zn=[layt[k][2] for k in range(len(layt))]# z-coordinates\n",
+    "\n",
+    "# check if they're kinfolk\n",
+    "Xnk=[layt[k][0] for k in range(len(layt)) if alpha[k]==1]# x-coordinates of nodes\n",
+    "Ynk=[layt[k][1] for k in range(len(layt)) if alpha[k]==1]# y-coordinates\n",
+    "Znk=[layt[k][2] for k in range(len(layt)) if alpha[k]==1]# z-coordinates\n",
+    "groupk=[group[k] for k in range(len(layt)) if alpha[k]==1]# color\n",
+    "#print(len(Xnk))\n",
+    "\n",
+    "# make edges\n",
+    "Xe=[]\n",
+    "Ye=[]\n",
+    "Ze=[]\n",
+    "Xek=[]\n",
+    "Yek=[]\n",
+    "Zek=[]\n",
+    "for e in Edges:\n",
+    "    try: \n",
+    "        e0 = df[df['id'] == e[0]].index.values[0]\n",
+    "    except:\n",
+    "        e0 = 0\n",
+    "    try:\n",
+    "        e1 = df[df['id'] == e[1]].index.values[0]\n",
+    "    except:\n",
+    "        e1 = 0\n",
+    "    #\n",
+    "    Xe+=[layt[e0][0],layt[e1][0], None]# x-coordinates of edge ends\n",
+    "    Ye+=[layt[e0][1],layt[e1][1], None]  \n",
+    "    Ze+=[layt[e0][2],layt[e1][2], None] \n",
+    "    # check if they're kinfolk\n",
+    "    if e[0] in kin:\n",
+    "        Xek+=[layt[e0][0],layt[e1][0], None]\n",
+    "        Yek+=[layt[e0][1],layt[e1][1], None]\n",
+    "        Zek+=[layt[e0][2],layt[e1][2], None]"
+   ]
   }
  ],
  "metadata": {
