added tsne and pca to lib

--- a/wiki-scraping-SANDBOX.ipynb
+++ b/wiki-scraping-SANDBOX.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
        "' automatic taxobox name monotremes ref name msw msw groves pages id ref fossil range late triassic ref cite journal last hugall first a f year title calibration choice rate smoothing and the pattern of tetrapod diversification according to the long nuclear gene rag url journal syst biol volume issue pages doi display authors etal ref holocene fossil range image prototheria collage png image caption a short beaked echidna a platypus a steropodon reconstruction and a western long beaked echidna taxon monotremata authority charles lucien bonaparte c l bonaparte ref cite journal last bonaparte first c l title a new systematic arrangement of vertebrated animals journal transactions of the linnean society of london date volume page doi j tb x url https www biodiversitylibrary org page ref subdivision ranks subgroups subdivision kryoryctes steropodontidae platypoda ornithorhynchidae tachyglossa echidna tachyglossidae monotremes are one of the three main groups of living mammal s along with placentals eutheria and marsupials metatheria the monotremes are typified by oviparity laying egg s rather than bearing live young and by structural differences in their brains jaws digestive and reproductive tracts and other body parts compared to the more common mammalian types however like all mammals the female monotremes nurse their young with milk monotremes are traditionally referred to as the mammalian subclass prototheria the only surviving examples of monotremes are all indigenous to australia and new guinea although there is evidence that they were once more widespread including some extinct species in south america ref cite journal last pascual first rosendo last archer first michael last jaureguizar first edgardo ortiz last prado first jos l last godthelp first henk last hand first suzanne j date title first discovery of monotremes in south america url https www nature com nature journal v n abs a html journal nature language en volume issue pages doi a ref the existing monotreme species are the platypus and four species of echidna s there is currently some debate regarding monotreme taxonomy taxonomy the word monotreme comes from the greek monos single and trema hole referring to the cloaca '"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,22 +155,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'{{Automatic taxobox\\n| fossil_range = [[Llandovery epoch|Llandovery]]<ref name=\"Sansom2015\">{{cite journal | last1 = Sansom | first1 = Robert S. | last2 = Randle | first2 = Emma | last3 = Donoghue | first3 = Philip C. J. | date = February 7, 2015 | title = Discriminating signal from noise in the fossil record of early vertebrates reveals cryptic evolutionary history | journal = [[Proceedings of the Royal Society B]] | volume = 282 | issue = 1800 | page = 20142245 | doi = 10.1098/rspb.2014.2245 | pmid=25520359 | pmc=4298210}}</ref>&ndash;Early [[Devonian]], {{fossil range|439|400}}\\n| image = Galeaspida_1.JPG\\n| authority = Liu, 1965\\n| subdivision_ranks = Orders\\n| subdivision = \\n[[Eugaleaspidiformes]] <small>Liu, 1965</small><br>\\n[[Huananaspidiformes]] <small>Janvier, 1975</small><br>\\n[[Polybranchiaspidiformes]] <small>Janvier, 1996</small>\\n}}\\n\\'\\'\\'Galeaspida\\'\\'\\' (from [[Latin]], \"Helmet shields\") is an extinct taxon of jawless marine and freshwater [[fish]]. The name is derived from \\'\\'galea\\'\\', the Latin word for \\'\\'helmet\\'\\', and refers to their massive bone shield on the head. Galeaspida lived in shallow, fresh water and marine environments during the [[Silurian]] and [[Devonian]] times (430 to 370 million years ago) in what is now Southern [[China]], [[Tibet]] and [[Vietnam]]. Superficially, their [[morphology (biology)|morphology]] appears more similar to that of [[Heterostraci]] than [[Osteostraci]], there being currently no evidence that the galeaspids had paired fins. However, Galeaspida are in fact regarded as being more closely related to Osteostraci, based on the closer similarity of the morphology of the [[braincase]].'"
+       "'{{automatic taxobox\\n| name = Monotremes<ref name=msw3>{{MSW3 Groves|pages=1-2|id=10300001}}</ref>\\n| fossil_range = [[Late Triassic]]<ref>{{cite journal | last1 = Hugall | first1 = A.F.| year = 2007 | title = Calibration choice, rate smoothing, and the pattern of tetrapod diversification according to the long nuclear gene RAG-1 | url = | journal = Syst. Biol. | volume = 56 | issue = 4| pages = 543–63 | doi=10.1080/10635150701477825|display-authors=etal}}</ref>–[[Holocene]], {{Fossil range|210|0}}\\n| image = Prototheria collage.png\\n| image_caption = A [[short-beaked echidna]], a [[platypus]], a \\'\\'[[Steropodon]]\\'\\' reconstruction and a [[western long-beaked echidna]]\\n| taxon = Monotremata\\n| authority = [[Charles Lucien Bonaparte|C.L. Bonaparte]], 1837<ref>{{cite journal|last1=Bonaparte|first1=C. L.|title=A New Systematic Arrangement of Vertebrated Animals|journal=Transactions of the Linnean Society of London|date=1837|volume=18|page=258|doi=10.1111/j.1095-8339.1838.tb00177.x|url=https://www.biodiversitylibrary.org/page/32952956}}</ref>\\n| subdivision_ranks = Subgroups\\n| subdivision =\\n*\\'\\'†[[Kryoryctes]]\\'\\'?\\n*†[[Steropodontidae]]\\n*[[Platypoda]]\\n**[[Ornithorhynchidae]]\\n*[[Tachyglossa]]\\n**[[Echidna|Tachyglossidae]]\\n}}\\n\\n\\'\\'\\'Monotremes\\'\\'\\' are one of the three main groups of living [[mammal]]s, along with placentals ([[Eutheria]]) and marsupials ([[Metatheria]]). The monotremes are typified by [[Oviparity|laying egg]]s rather than bearing live young, and by structural differences in their brains, jaws, digestive and reproductive tracts, and other body parts compared to the more common mammalian types. However, like all mammals, the female monotremes nurse their young with [[milk]].\\n\\nMonotremes are traditionally referred to as the mammalian subclass [[Prototheria]]. The only surviving examples of monotremes are all indigenous to [[Australia]] and [[New Guinea]] although there is evidence that they were once more widespread including some extinct species in South America.<ref>{{Cite journal|last=Pascual|first=Rosendo|last2=Archer|first2=Michael|last3=Jaureguizar|first3=Edgardo Ortiz|last4=Prado|first4=José L.|last5=Godthelp|first5=Henk|last6=Hand|first6=Suzanne J.|date=1992-04-23|title=First discovery of monotremes in South America|url=https://www.nature.com/nature/journal/v356/n6371/abs/356704a0.html|journal=Nature|language=en|volume=356|issue=6371|pages=704–706|doi=10.1038/356704a0}}</ref> The existing monotreme species are the [[platypus]] and four species of [[echidna]]s. There is currently some debate regarding monotreme [[#Taxonomy|taxonomy]].\\n\\nThe word \\'\\'monotreme\\'\\' comes from the Greek μονός, \\'\\'monos\\'\\' (\"single\") and τρῆμα, \\'\\'trema\\'\\' (\"hole\"), referring to the [[cloaca]].'"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "this_query = \"Xiushuiaspis\"\n",
+    "this_query = \"Monotremata\"\n",
     "#def get_dates(this_query, gt):\n",
     "\"\"\"gets the earliest and latest date for an organism\n",
     "this_query - a text sting organism name\n",
@@ -189,94 +189,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "the_clade = \"Australosphenida\"\n",
+    "the_clade in box_raw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " = [[Llandovery epoch|Llandovery]]<ref name=\"Sansom2015\">{{cite journal | last1 = Sansom | first1 = Robert S. | last2 = Randle | first2 = Emma | last3 = Donoghue | first3 = Philip C. J. | date = February 7, 2015 | title = Discriminating signal from noise in the fossil record of early vertebrates reveals cryptic evolutionary history | journal = [[Proceedings of the Royal Society B]] | volume = 282 | issue = 1800 | page = 20142245 | doi = 10.1098/rspb.2014.2245 | pmid=25520359 | pmc=4298210}}</ref>&ndash;Early [[Devonian]], {{fossil range|439|400}}\n"
+      "{{automatic taxobox\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_box = next(iter(box_raw['query']['pages'].values()))['revisions'][0]['*']\n",
+    "print(new_box[:20])\n",
+    "the_clade in new_box"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " = [[Late Triassic]]<ref>{{cite journal | last1 = Hugall | first1 = A.F.| year = 2007 | title = Calibration choice, rate smoothing, and the pattern of tetrapod diversification according to the long nuclear gene RAG-1 | url = | journal = Syst. Biol. | volume = 56 | issue = 4| pages = 543–63 | doi=10.1080/10635150701477825|display-authors=etal}}</ref>–[[Holocene]], {{Fossil range|210|0}}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "['',\n",
-       " 'Llandovery',\n",
-       " 'epoch',\n",
-       " 'Llandovery',\n",
+       " 'Late_Triassic',\n",
        " 'ref',\n",
-       " 'name',\n",
-       " 'Sansom2015',\n",
        " 'cite',\n",
        " 'journal',\n",
        " 'last1',\n",
-       " 'Sansom',\n",
+       " 'Hugall',\n",
        " 'first1',\n",
-       " 'Robert',\n",
-       " 'S.',\n",
-       " 'last2',\n",
-       " 'Randle',\n",
-       " 'first2',\n",
-       " 'Emma',\n",
-       " 'last3',\n",
-       " 'Donoghue',\n",
-       " 'first3',\n",
-       " 'Philip',\n",
-       " 'C.',\n",
-       " 'J.',\n",
-       " 'date',\n",
-       " 'February',\n",
-       " '7',\n",
-       " '2015',\n",
+       " 'A.F.',\n",
+       " 'year',\n",
+       " '2007',\n",
        " 'title',\n",
-       " 'Discriminating',\n",
-       " 'signal',\n",
-       " 'from',\n",
-       " 'noise',\n",
-       " 'in',\n",
+       " 'Calibration',\n",
+       " 'choice',\n",
+       " 'rate',\n",
+       " 'smoothing',\n",
+       " 'and',\n",
        " 'the',\n",
-       " 'fossil',\n",
-       " 'record',\n",
+       " 'pattern',\n",
        " 'of',\n",
-       " 'early',\n",
-       " 'vertebrates',\n",
-       " 'reveals',\n",
-       " 'cryptic',\n",
-       " 'evolutionary',\n",
-       " 'history',\n",
+       " 'tetrapod',\n",
+       " 'diversification',\n",
+       " 'according',\n",
+       " 'to',\n",
+       " 'the',\n",
+       " 'long',\n",
+       " 'nuclear',\n",
+       " 'gene',\n",
+       " 'RAG',\n",
+       " '1',\n",
+       " 'url',\n",
        " 'journal',\n",
-       " 'Proceedings',\n",
-       " 'of',\n",
-       " 'the',\n",
-       " 'Royal',\n",
-       " 'Society',\n",
-       " 'B',\n",
+       " 'Syst.',\n",
+       " 'Biol.',\n",
        " 'volume',\n",
-       " '282',\n",
+       " '56',\n",
        " 'issue',\n",
-       " '1800',\n",
-       " 'page',\n",
-       " '20142245',\n",
+       " '4',\n",
+       " 'pages',\n",
+       " '543',\n",
+       " '63',\n",
        " 'doi',\n",
-       " '10.1098',\n",
-       " 'rspb.2014.2245',\n",
-       " 'pmid',\n",
-       " '25520359',\n",
-       " 'pmc',\n",
-       " '4298210',\n",
+       " '10.1080',\n",
+       " '10635150701477825',\n",
+       " 'display',\n",
+       " 'authors',\n",
+       " 'etal',\n",
        " 'ref',\n",
-       " 'ndash',\n",
-       " 'Early_Devonian',\n",
-       " 'fossil',\n",
+       " 'Holocene',\n",
+       " 'Fossil',\n",
        " 'range',\n",
-       " '439',\n",
-       " '400',\n",
+       " '210',\n",
+       " '0',\n",
        " '']"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
